--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "build": "babel-node --eval \"require('./tools/build')().catch(err => console.log(err.stack))\"",
     "start": "babel-node --eval \"require('./tools/start')().catch(err => console.log(err.stack))\"",
     "deploy": "babel-node --eval \"require('./tools/deploy')().catch(err => console.log(err.stack))\""
+  },
+  "dependencies": {
+    "mo-js": "0.147.4",
+    "react-hammerjs": "0.4.5"
   }
 }
